--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-ws": "^5.0.2",
+    "mongodb": "^4.2.1",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "mongoose": "^6.1.1"
   }
 }
